--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.13"
   }
 }
-  
