--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://khanshahnwaz.github.io/MERN_ChatBot)",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -14,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
+    "gh-pages": "^6.2.0",
     "highlight.js": "^11.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
